--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.2.3
   image_picker: ^1.0.8
   image_picker_android: ^0.8.9+6
+  firebase_storage: ^11.6.9
 
 
 
