--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.0.8
   image_picker_android: ^0.8.9+6
   firebase_storage: ^11.6.9
+  emoji_picker_flutter: ^2.1.1
 
 
 
