--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   image_picker_android: ^0.8.9+6
   firebase_storage: ^11.6.9
   emoji_picker_flutter: ^2.1.1
+  intl: ^0.19.0
+  gallery_saver: ^2.3.2
 
 
 
