--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,14 @@ dependencies:
   firebase_auth: ^4.17.8
   firebase_messaging: ^14.7.19
   fluttertoast: ^8.2.5
-  shared_preferences: ^2.2.3
   image_picker: ^1.0.8
   image_picker_android: ^0.8.9+6
   firebase_storage: ^11.6.9
   emoji_picker_flutter: ^2.1.1
   intl: ^0.19.0
-
+  http: ^0.13.1
+  firebase_analytics: ^10.8.9
+  googleapis_auth: ^1.4.1
 
 
 
