--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,11 @@ dependencies:
   firebase_storage: ^11.6.9
   emoji_picker_flutter: ^2.1.1
   intl: ^0.19.0
-  http: ^0.13.1
+  http: ^1.1.0
   firebase_analytics: ^10.8.9
   googleapis_auth: ^1.4.1
+  google_generative_ai: 0.1.0
+  lottie: ^3.0.0
 
 
 
